--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Hello Front-End</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
+  
+  <title>Airbnb CSS</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div class="container">
+    <h2>Meet Guidebooks</h2>
+    <p>Discover hundreds of local spots recommended by Airbnb hosts</p>
+
+    <div class="locations">
+      <p class="cityNames">San Francisco</p>
+      <img src="img/san-francisco.jpg" alt="San Francisco">
+      <p class="cityNames">New York</p>
+      <img src="img/new-york.jpg" alt="New York">
+      <p class="cityNames">London</p>
+      <img src="img/london.jpg" alt="London">
+    </div>
+
+      <br>
+
+      <button>
+        <p>See all Guidebooks</p>
+      </button>
+    
+
+  </div>
+    <h2>Just for the weekend</h2>
+    <p>Discover new, inspiring close to home.</p>
+
+    <div class="locations">
+      <p class="cityNames">napa</p>
+      <img src="img/napa.jpg" alt="Napa">
+      <p class="cityNames">Sonoma</p>
+      <img src="img/sonoma.jpg" alt="Sonoma">
+      <p class="cityNames">San Francisco</p>
+      <img src="img/san-francisco-2.jpg" alt="San Francisco">
+    </div>
+
+    <br>
+      <button>
+        <p>See All Destinations</p>
+      </button>
+  </div>
 </body>
 </html>
